Use `UNSAFE` instead `--add-opens`